[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/GUI/actionMenu.gd" type="Script" id=1]
[ext_resource path="res://theme/basic.thm" type="Theme" id=2]

[node name="ActionMenu" type="VBoxContainer"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
margin/left = 462.0
margin/top = 154.0
margin/right = 340.0
margin/bottom = 14.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
custom_constants/separation = 5
alignment = 0
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="AttackButton" type="Button" parent="."]

margin/right = 122.0
margin/bottom = 24.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
toggle_mode = false
text = "ATTACK"
flat = false

[node name="DefendButton" type="Button" parent="."]

margin/top = 29.0
margin/right = 122.0
margin/bottom = 53.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
toggle_mode = false
text = "DEFEND"
flat = false

[node name="ItemsButton" type="Button" parent="."]

margin/top = 58.0
margin/right = 122.0
margin/bottom = 82.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
toggle_mode = false
text = "ITEMS"
flat = false

[node name="SkillButton" type="Button" parent="."]

margin/top = 87.0
margin/right = 122.0
margin/bottom = 111.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
toggle_mode = false
text = "SKILL"
flat = false

[node name="MagicButton" type="Button" parent="."]

margin/top = 116.0
margin/right = 122.0
margin/bottom = 140.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
toggle_mode = false
text = "MAGIC"
flat = false

[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]

[connection signal="pressed" from="DefendButton" to="." method="_on_DefendButton_pressed"]

[connection signal="pressed" from="ItemsButton" to="." method="_on_ItemsButton_pressed"]

[connection signal="pressed" from="SkillButton" to="." method="_on_SkillButton_pressed"]

[connection signal="pressed" from="MagicButton" to="." method="_on_MagicButton_pressed"]


